# i3switcher

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  install.sh  result  rust-toolchain.toml  shell.nix
src/: main.rs
