[package]
name = "i3switcher"
description = "Provides various methods for switching workspaces in i3 and sway. In particular, provides a tools for auto-creating new workspaces as they are needed, similar to GNOME shell."
version = "0.4.0"
authors = ["grenewode"]
readme = "README.md"
repository = "https://github.com/grenewode/i3switcher"
homepage = "https://github.com/grenewode/i3switcher"
keywords = ['i3', 'sway']
license-file = "LICENSE"
edition = "2021"

[dependencies]
i3ipc = "0.8"
clap = { version = "3.1", features = [ "derive" ] }
anyhow = { version = "1.0" }
